--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,60 +1,67 @@
-name: Android Release Build
-
-on:
-  workflow_dispatch:
-  push:
+name: Android Debug Build
+      
+  on:
+    workflow_dispatch:
+    push:
     branches: [ "main" ]
-  pull_request:
+    pull_request:
     branches: [ "main" ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Gradle Cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Set up JDK undefined
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 'undefined'
-          cache: 'gradle'
-
-      - name: Decode Keystore File
-        run: |
-          echo "${{ secrets.RELEASE_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: undefined
-
-      - name: Install npm dependencies
-        run: npm install
-
-      - name: Build Release APK
-        run: ./gradlew assembleRelease --no-daemon
-        working-directory: android
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-
-      - name: Upload release APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-apk
-          path: android/app/build/outputs/apk/release/*.apk
-          retention-days: 7
+  
+  jobs:
+    build:
+      runs-on: ubuntu-latest
+  
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+  
+        - name: Setup Gradle Cache
+          uses: actions/cache@v3
+          with:
+            path: |
+              ~/.gradle/caches
+              ~/.gradle/wrapper
+            key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+            restore-keys: |
+              ${{ runner.os }}-gradle-
+  
+        - name: Set up JDK undefined
+          uses: actions/setup-java@v3
+          with:
+            distribution: 'temurin'
+            java-version: 'undefined'
+            cache: 'gradle'
+  
+        - name: Setup Node.js
+          uses: actions/setup-node@v3
+          with:
+            node-version: 'undefined'
+  
+        - name: Install Android SDK
+          run: |
+            echo "y" | sudo apt-get update
+            echo "y" | sudo apt-get install -y --no-install-recommends \
+              android-sdk \
+              android-sdk-platform-34 \
+              android-sdk-build-tools-34
+  
+        - name: Configure Android SDK
+          run: |
+            echo "ANDROID_HOME=/usr/lib/android-sdk" >> $GITHUB_ENV
+            echo "/usr/lib/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+            echo "/usr/lib/android-sdk/platform-tools" >> $GITHUB_PATH
+            echo "ANDROID_SDK_ROOT=/usr/lib/android-sdk" >> $GITHUB_ENV
+            yes | sdkmanager --licenses
+            sdkmanager --update
+  
+        - name: Build Debug APK
+          run: ./gradlew assembleDebug -Dorg.gradle.jvmargs="-Xmx4096m -XX:MaxMetaspaceSize=1024m" --no-daemon
+          working-directory: android
+  
+        - name: Upload APK artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: debug-apk
+            path: android/app/build/outputs/apk/debug/*.apk
+            retention-days: 7
+  
