--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,25 +25,25 @@ name: Android Debug Build
             restore-keys: |
               ${{ runner.os }}-gradle-
   
-        - name: Set up JDK undefined
+        - name: Set up JDK 17
           uses: actions/setup-java@v3
           with:
             distribution: 'temurin'
-            java-version: 'undefined'
+            java-version: '17'
             cache: 'gradle'
   
         - name: Setup Node.js
           uses: actions/setup-node@v3
           with:
-            node-version: 'undefined'
+            node-version: '16'
   
         - name: Install Android SDK
           run: |
             echo "y" | sudo apt-get update
             echo "y" | sudo apt-get install -y --no-install-recommends \
               android-sdk \
-              android-sdk-platform-34 \
-              android-sdk-build-tools-34
+              android-sdk-platform-33 \
+              android-sdk-build-tools-33
   
         - name: Configure Android SDK
           run: |
